[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
dashmap = "5.3.4"
log = "0.4.17"
simple_logger = "2.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"